Fixed the overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,8 @@
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    height: 100%;
+    overflow:hidden
   }
   Label {
     color: #717680;
